{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 36,
  "lineage": "749b7a3e-b679-e9c4-d323-4fb7c279dfaa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Adiinfra-natip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f43446863168105f",
            "arn": "arn:aws:ec2:ap-south-1:654654318994:elastic-ip/eipalloc-0f43446863168105f",
            "association_id": "eipassoc-02ad2edaacd8b3e19",
            "domain": "vpc",
            "id": "eipalloc-0f43446863168105f",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a2653c225d76743d",
            "private_dns": "ip-10-0-7-126.ap-south-1.compute.internal",
            "private_ip": "10.0.7.126",
            "public_dns": "ec2-15-207-232-115.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.232.115",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Adiinfra-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:internet-gateway/igw-02cdfcb26d2dd983b",
            "id": "igw-02cdfcb26d2dd983b",
            "owner_id": "654654318994",
            "tags": {
              "Name": "Adiinfra-igw"
            },
            "tags_all": {
              "Name": "Adiinfra-igw"
            },
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "dependencies": [
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Adiinfra-natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f43446863168105f",
            "association_id": "eipassoc-02ad2edaacd8b3e19",
            "connectivity_type": "public",
            "id": "nat-08b19ffd4e46ff814",
            "network_interface_id": "eni-0a2653c225d76743d",
            "private_ip": "10.0.7.126",
            "public_ip": "15.207.232.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f8fa2e623acfc7ce",
            "tags": {
              "Name": "Adiinfra-natgateway"
            },
            "tags_all": {
              "Name": "Adiinfra-natgateway"
            }
          },
          "dependencies": [
            "aws_eip.Adiinfra-natip",
            "aws_internet_gateway.Adiinfra-igw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:route-table/rtb-0694369757be2ac04",
            "id": "rtb-0694369757be2ac04",
            "owner_id": "654654318994",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08b19ffd4e46ff814",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Adiinfra-natip",
            "aws_internet_gateway.Adiinfra-igw",
            "aws_nat_gateway.Adiinfra-natgateway",
            "aws_subnet.public-subnet-1",
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:route-table/rtb-049074dc840f35d37",
            "id": "rtb-049074dc840f35d37",
            "owner_id": "654654318994",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02cdfcb26d2dd983b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Adiinfra-igw",
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016f7bb29d8f151e7",
            "route_table_id": "rtb-049074dc840f35d37",
            "subnet_id": "subnet-0f8fa2e623acfc7ce"
          },
          "dependencies": [
            "aws_internet_gateway.Adiinfra-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet-1",
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae8590a725ec6c58",
            "route_table_id": "rtb-049074dc840f35d37",
            "subnet_id": "subnet-0adc1567015a63663"
          },
          "dependencies": [
            "aws_internet_gateway.Adiinfra-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet-2",
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:security-group/sg-08b1c04819784cf98",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b1c04819784cf98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240722052735219800000001",
            "name_prefix": "terraform-",
            "owner_id": "654654318994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-sg"
            },
            "tags_all": {
              "Name": "backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:security-group/sg-0d8b43331aa6b18ba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8b43331aa6b18ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240722052735221100000003",
            "name_prefix": "terraform-",
            "owner_id": "654654318994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:security-group/sg-07ae94d6d9cfd254c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ae94d6d9cfd254c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240722052735220400000002",
            "name_prefix": "terraform-",
            "owner_id": "654654318994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-sg"
            },
            "tags_all": {
              "Name": "frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:security-group/sg-004e57a7e0c1dbc7f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004e57a7e0c1dbc7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240722050145205600000001",
            "name_prefix": "terraform-",
            "owner_id": "654654318994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-sg"
            },
            "tags_all": {
              "Name": "public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:subnet/subnet-0b8c7ad3544da6198",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8c7ad3544da6198",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654318994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "backend-subnet-1"
            },
            "tags_all": {
              "Name": "backend-subnet-1"
            },
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "dependencies": [
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:subnet/subnet-0ab2047311bac3ea8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab2047311bac3ea8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654318994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "backend-subnet-2"
            },
            "tags_all": {
              "Name": "backend-subnet-2"
            },
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "dependencies": [
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:subnet/subnet-0434db080bef20e07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0434db080bef20e07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654318994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet-2"
            },
            "tags_all": {
              "Name": "db-subnet-2"
            },
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "dependencies": [
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:subnet/subnet-0b3283ecb324ef7c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3283ecb324ef7c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654318994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet-2"
            },
            "tags_all": {
              "Name": "db-subnet-2"
            },
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "dependencies": [
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:subnet/subnet-09e6e0deb52f81b47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e6e0deb52f81b47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654318994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frontend-subnet-1"
            },
            "tags_all": {
              "Name": "frontend-subnet-1"
            },
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "dependencies": [
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:subnet/subnet-08c6c437c6a817732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c6c437c6a817732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654318994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frontend-subnet-2"
            },
            "tags_all": {
              "Name": "frontend-subnet-2"
            },
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "dependencies": [
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:subnet/subnet-0f8fa2e623acfc7ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8fa2e623acfc7ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654318994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "dependencies": [
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:subnet/subnet-0adc1567015a63663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adc1567015a63663",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654318994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0f9024ae06f266c90"
          },
          "dependencies": [
            "aws_vpc.Adiinfra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Adiinfra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654318994:vpc/vpc-0f9024ae06f266c90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7e1f54343cfb1e3",
            "default_route_table_id": "rtb-0b5c3c98a2125e634",
            "default_security_group_id": "sg-084a3cd2db5ad9c36",
            "dhcp_options_id": "dopt-0ea01837449a6374c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9024ae06f266c90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b5c3c98a2125e634",
            "owner_id": "654654318994",
            "tags": {
              "Name": "Adiinfra_project"
            },
            "tags_all": {
              "Name": "Adiinfra_project"
            }
          }
        }
      ]
    }
  ]
}